style: fix container overflow page

--- a/static/sass/_pattern_careers-progression.scss
+++ b/static/sass/_pattern_careers-progression.scss
@@ -112,8 +112,7 @@
       --width: 110px;
     }
 
-    animation: slide-right map-get($animation-duration, sleepy) 1 forwards
-      cubic-bezier(0.6, 0.12, 0.28, 0.75);
+    animation: slide-right map-get($animation-duration, sleepy) 1 forwards cubic-bezier(0.6, 0.12, 0.28, 0.75);
     display: block;
     opacity: 0;
     overflow: hidden;
@@ -336,7 +335,8 @@
   .p-3d-carousel__container {
     .p-3d-carousel__item {
       background-color: $color-x-light;
-      box-shadow: 0 0 46.8px rgb(0 0 0 / 10%),
+      box-shadow:
+        0 0 46.8px rgb(0 0 0 / 10%),
         1.56px 1.56px 1.56px rgb(0 0 0 / 5%);
       height: 212px;
       left: 50%;
@@ -386,6 +386,8 @@
   .u-hug-right__container {
     margin: 0 auto;
     max-width: 72rem;
+    padding-left: 0;
+    padding-right: 0;
 
     @media screen and (max-width: $breakpoint-large) {
       overflow-x: visible;
